web-infras/parser/tests/fixtures/babel/es2015/generators/invalid-hanging/output.txt
[SyntaxError]: Generator functions can only be declared at the top level or inside a block. (1,8)
1|if (1) function *foo() {}
 |      ^
